[package]
name = "josephine"
version = "0.2.0"
authors = ["ajeffrey@mozilla.com"]
license = "MPL-2.0"
description = "Josephine: using JavaScript to safely manage the lifetimes of Rust data"
repository = "https://github.com/asajeffrey/josephine/"

[lib]

[features]
debugmozjs = ["mozjs/debugmozjs"]

[dependencies]
josephine_derive = "0.1.0"
libc = "0.2.62"
log = "0.3"
mozjs = { git = "https://github.com/servo/rust-mozjs", rev="c2896b9c9f8681070890bc9582378472d0139b13"} # 67

[dev-dependencies]
env_logger = "0.7"

[[example]]
name = "minidom"
path = "examples/minidom/main.rs"

[[example]]
name = "dbllist"
path = "examples/dbllist/main.rs"
